# ltu_domestic_robots

./: README.md
detect_and_touch/: .gitignore  manifest.xml  setup.py
detect_and_touch/scripts/detect_and_touch/: camera_params.py  clip_segmentation.py  map_utils.py  poke.py  ros_object_query.py  segmentation.py  waypoint_nav.py  yolo_segmentation.py
laundry_demo/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
laundry_demo/launch/: commander.launch
laundry_demo/scripts/: commander.py
laundry_demo/src/laundry_demo/: joint_commands.py  nav_commands.py  perception_commands.py
stretch_funmap/launch/: drivers.launch  funmap_only.launch
stretch_funmap/nodes/: funmap
stretch_funmap/rviz/: stretch_mapping.rviz
stretch_funmap/src/stretch_funmap/: cython_min_cost_path.c  navigate.py
stretch_srvs/: CMakeLists.txt  package.xml
stretch_srvs/msg/: Cluster.msg  ClusterArray.msg
stretch_srvs/srv/: DrawCluster.srv  GetCluster.srv  MoveArm.srv  NavigateBaseAroundObjects.srv  SetInt.srv
synchronized_throttle/: record_bag.sh
synchronized_throttle/launch/: synchronize_stretch.launch
synchronized_throttle/src/: rgbd_synchronizer.cpp
yolo/: CMakeLists.txt  package.xml
yolo/launch/: tt_yolov5.launch
yolo/scripts/: Image_processing.py  detect.py  tt_yolov5.py
yolov5/: CMakeLists.txt  package.xml
yolov5/msg/: Detection.msg  DetectionArray.msg
